# DLcvTry

./: README.md  pyproject.toml  setup.py
src/: config.py  img2vid.py  train.py  training.py  utils.py  visualize.py
src/data/: cisol_dataset.py
src/models/: FCOS.py  faster_rcnn.py  retina_net.py
src/train_losses/: FasterRcnn_run.csv  RetinaNet_run.csv  fcos_run.csv
